# gridtokenx-coresystem

./: .dockerignore  .env.example  .env.production.example  .env.secrets  .env.secrets.example  .gitignore  .gitmodules  .mcp.json  ADAPTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  National.md  README.md  SECURITY.md  SKILL.md  bridge-keypair.json  dev-wallet.json  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  gTHB_ISSUER_SERVICE.md  gen_stress.py  gridtokenx-refactor-checklist.md  gridtokenx-refactor-plan.md  gridtokenx-rust-structure.md  grx.nu  insecure-dev-wallet.json  otel-agent-config.yaml  otel-gateway-config.yaml  package-lock.json  package.json  plan.md  secure.env  skills-lock.json  test_meter_keys.json
.antigravitycli/: fee27b8c-a085-4293-8535-3b3ffc4b28e7.json
.claude/: settings.json
.qwen/: settings.json  settings.json.orig
.superset/: config.json
Paper/: .gitignore  CLAUDE.md  backup.txt  glossary.typ  ieee-template.typ  main-en.typ  main.typ  metrics.typ  references.bib
UTCC_paper/: TH_final_paper.typ  TH_final_paper2.typ
apisix_conf/: ARCHITECTURE.md  apisix.yaml  config.yaml
docs/: AGENT_STATE_20260602.md  ALL_DOCS.md  BLOCKCHAIN_CORE_ACADEMIC.md  CHAIN_BRIDGE_ACADEMIC.md  DATA_FLOW.md  DESIGN.md  E2E_IMPL_PLAN.md  E2E_TEST_PLAN.md  FRONTEND.md  IAM_SERVICE_ACADEMIC.md  LAYERED_SYSTEM_ARCHITECTURE.md  MINTING_E2E_FLOW.md  NOTI_SERVICE_ACADEMIC.md  National.md  ORACLE_BRIDGE_ACADEMIC.md  Overview.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SMARTMETER_SIMULATOR_ACADEMIC.md  SURFPOOL.md  TRADING_SERVICE_ACADEMIC.md  VALIDATOR_EQUATIONS.md  VALIDATOR_EQUATIONS_TH.md  benchmark-best-practices.md  benchmark_results.md  blockchain-architecture.md  blockchain-governance.md  blockchain-market-flows.md  blockchain-node-network.md  blockchain-service-mesh.md  blockchain-smart-contracts.md  blockchain-system.md  blockchain-thailand-context.md  blockchain-tokens.md  e2e-cross-service-communication.md  glossary.md  gridtokenx-refactor-checklist.md  (+5 more)
envoy_conf/: ARCHITECTURE.md  envoy.yaml
gridtokenx-telemetry/: ARCHITECTURE.md  Cargo.toml
gridtokenx-telemetry/src/: json_format.rs  lib.rs  time.rs
monitoring/: aggregator_bridge_dashboard.json  gridtokenx-alerts.yml  oracle_bridge_dashboard.json  prometheus_rules.yml
nats_conf/: nats-server.conf
papers/: 2108.00925-dvpp-adaptive-control.md  2510.02985-html.md  2510.02985-realtime-p2p-double-auction.md  CLAUDE.md  assa_clearing_prototype.rs  sensors-22-08397-p2p-blockchain-survey.md
scratch/: debug_onboard.sh  key.json  start_services.sh
scripts/: _reg_loop.sh  app.sh  backfill_onchain_reg.sh  backfill_user_pda.sh  bench-ingest-summary.py  bench-ingest.sh  bench_settle_tps_loop.sh  check-balance.sh  session.sh  (+52 more)
(+301 files in other folders)
