[package]
name = "gridtokenx-telemetry"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "Shared telemetry initialization (structured tracing) for GridTokenX services"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
